<resources>
    <string name="app_name">AmbChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="androidStudio">Android Studio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="female">FeMale</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="fullName">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="date">10/10/1997</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="repeatPassword">Repeat Password</string>
    <string name="register">Register</string>
    <string name="rememberPassword">Remember Password</string>
    <string name="logIn">Log In</string>
    <string name="chuaCoACC">Nếu chưa có tài khoản nhấn vào </string>
    <string name="searchMess">Search mess</string>
    <string name="Search">Search</string>
    <string name="nameFriendChat">Tên người chat"</string>
    <string name="updateInfor">Update</string>
    <string name="changePass">Chỉnh sửa</string>
    <string name="SearchFriend">Search friend</string>
    <string name="FriendName">Tên người chat</string>
    <string name="MessLast"> Tin nhắn cuối</string>
    <string name="addfr">Thêm bạn</string>
    <string name="sendmess">Nhắn tin</string>
    <string name="tin_nhan_cuoi">Tin nhắn cuối</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="message_text">Message Text</string>
    <string name="_00_00">00:00</string>
    <string name="click_dk">đây</string>
    <string name="add_friend">Add</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password</string>
    <string name="type_a_message">Type a message...</string>
    <string name="add_fr">ADD</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone number</string>
    <string name="title">Title</string>
    <string name="close">CLOSE</string>
</resources>
