<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/back"
        android:clickable="false" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">


            <ImageView
                android:id="@+id/imgSignUp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:src="@mipmap/login" />

            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/fullName"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/distant_com_sign"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapeemail"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="86dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center|start"
                    android:text="@string/gender"
                    android:textAppearance="@style/textMedium"
                    android:textColor="@color/white" />

                <RadioGroup

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_weight="8"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radMale"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/male"
                        android:checked="true"
                        android:textAppearance="@style/textMedium"
                        android:textColor="@color/white" />

                    <RadioButton
                        android:id="@+id/radFemail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginLeft="@dimen/margin"
                        android:text="@string/female"
                        android:textAppearance="@style/textMedium"
                        android:textColor="@color/white" />

                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/distant_com_sign"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_email_white_18dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/distant_com_sign"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/userName"
                android:inputType="textPersonName"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtPassWord"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/distant_com_sign"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_lock_black2_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/edtRepeatPass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/distant_com_sign"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapeemail"
                android:drawableStart="@drawable/ic_lock_black2_24dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/repeatPassword"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="@dimen/distant_com_sign"
                android:layout_marginRight="30dp"
                android:background="@drawable/shapelogin"
                android:padding="15dp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/register" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
