<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_person_pin_black_48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/fullName"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtFullNameInfor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="0.7"
                android:inputType="text"
                android:text="@string/fullName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/userName"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/edtUserNameInfor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin0"
                android:layout_weight="0.7"
                android:gravity="left"
                android:inputType="text"
                android:text="@string/userName"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/password"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtPassWordInfor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="left"
                android:inputType="textPassword"
                android:text="@string/password"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_weight="0.3"
                android:gravity="left"
                android:text="@string/repeatPassword"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edtRepeatPasswordInfor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="left"
                android:inputType="textPassword"
                android:text="@string/password"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_weight="0.7"
                android:gravity="left"
                android:text="@string/gender"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/padding_username">

                <RadioButton
                    android:id="@+id/radMaleInfor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radFemaleInfor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin"
                    android:text="@string/female" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_weight="0.5"
                android:gravity="left"
                android:text="@string/birthday"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/date"
                android:textAppearance="@style/textMedium"
                android:layout_height="wrap_content"
                android:inputType="date"
                tools:ignore="TextViewEdits" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/padding_username"
                android:layout_marginStart="@dimen/padding_username"
                android:layout_weight="0.4"
                android:gravity="left"
                android:text="@string/email"
                android:textAppearance="@style/textMedium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/txtEmailInfor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.8"
                android:gravity="left"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/textMedium"
                android:textColor="@color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateInfor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin100"
            android:layout_marginRight="@dimen/margin100"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/updateInfor"
            android:textAllCaps="true"
            android:textAppearance="@style/textMedium"
            android:textColor="#ffffff" />
    </LinearLayout>
</ScrollView>

