<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".fragments.ChatsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgIconSearchFr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:src="@drawable/baseline_search_black_18dp" />

        <EditText
            android:id="@+id/edtSearchFr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/searchMess" />

        <Button
            android:id="@+id/btnSearchFr"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:gravity="center"
            android:hint="@string/Search"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="8.3"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/white"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgFriend"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"

                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                android:scaleType="fitCenter"
                android:src="@drawable/baseline_person_pin_black_18dp"
                android:layout_marginLeft="14dp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/txtNameFr"
                android:layout_width="137dp"
                android:layout_height="35dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/imgFriend"
                android:layout_toRightOf="@+id/imgFriend"
                android:text="@string/nameFriendChat"
                android:textAppearance="@style/textMedium"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/imgPhoneFr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginEnd="83dp"
                android:layout_marginRight="83dp"
                android:src="@drawable/baseline_call_black_18dp" />

            <ImageView
                android:id="@+id/imgVideoCallFr"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/baseline_videocam_black_18dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="24dp"
                android:layout_toEndOf="@+id/imgFriend"
                android:text="Tin nhan cuoi"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgListFriend1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/baseline_supervisor_account_black_18dp" />

        <ImageView
            android:id="@+id/imgListMess1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/baseline_message_black_18dp" />

    </LinearLayout>

</LinearLayout>
